[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Bartosz Różański <bartosz.rozanski@codilime.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.4"

[dev-dependencies]
actix-rt = "2.1.0"
reqwest = "0.11.2"
tokio = "1.3.0"
