[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Bartosz Różański <bartosz.rozanski@codilime.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5.7", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
config = "0.11"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rand = { version = "0.8", features = ["std_rng"] }

[dev-dependencies]
actix-rt = "2.1"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.8.1"
once_cell = "1"
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1.0.80"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.13"
